--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=favicon.ico>
+    <link rel=icon href=/wsm-preview/favicon.ico>
     <title>微商城后台管理</title>
-    <link href=css/app.0a0897cb.css rel=preload as=style>
-    <link href=css/chunk-vendors.986f5dce.css rel=preload as=style>
-    <link href=js/app.27db0cad.js rel=preload as=script>
-    <link href=js/chunk-vendors.25dfaf3a.js rel=preload as=script>
-    <link href=css/chunk-vendors.986f5dce.css rel=stylesheet>
-    <link href=css/app.0a0897cb.css rel=stylesheet>
+    <link href=/wsm-preview/css/app.0a0897cb.css rel=preload as=style>
+    <link href=/wsm-preview/css/chunk-vendors.986f5dce.css rel=preload as=style>
+    <link href=/wsm-preview/js/app.a94bef01.js rel=preload as=script>
+    <link href=/wsm-preview/js/chunk-vendors.25dfaf3a.js rel=preload as=script>
+    <link href=/wsm-preview/css/chunk-vendors.986f5dce.css rel=stylesheet>
+    <link href=/wsm-preview/css/app.0a0897cb.css rel=stylesheet>
 </head>
 <body>
 <noscript><strong>We're sorry but vue-integrate doesn't work properly without JavaScript enabled. Please enable it to
     continue.</strong></noscript>
 <div id=app></div>
-<script src=js/chunk-vendors.25dfaf3a.js></script>
-<script src=js/app.27db0cad.js></script>
+<script src=/wsm-preview/js/chunk-vendors.25dfaf3a.js></script>
+<script src=/wsm-preview/js/app.a94bef01.js></script>
 </body>
 </html>
